# protocon

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel
.github/workflows/: pkg_docker.yaml  test_bazel.yaml  test_cmake.yaml
dep/cmake_fetchcontent/: fildesh.cmake
src/: BUILD.bazel  CMakeLists.txt  main-mpi.cc  mpidissem.cc  mpidissem.hh  opt.cc
src/cx/: BUILD.bazel  table.hh
src/inline/: BUILD.bazel
src/satsyn/: BUILD.bazel
src/udp-impl/: BUILD.bazel
src/uni/: BUILD.bazel  livelock.cc
src/verif/: include.cmake
test/: CMakeLists.txt
test/examplesoln/: BUILD.bazel  CMakeLists.txt  Espresso_MatchRingThreeState_test.fildesh  PLA_MatchRingThreeState_test.fildesh  Promela_OrientDaisy_test.fildesh  UDP_TokenRingRand_test.fildesh  Verif4_OrientRingOdd_failure_test.fildesh  Verif4_Sync_OrientRing_test.fildesh
test/examplespec/: CMakeLists.txt
test/manual/: tidy_bazel.fildesh
test/satsyn/: BUILD.bazel
test/src/: BUILD.bazel
test/uni/: BUILD.bazel  g_d4_c8_test.fildesh  synthesize_test.fildesh
