module(
    name = "protocon",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "fildesh", version = "0.2.0")
bazel_dep(name = "mdd-glu", version = "2.4.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_peg", version = "0.1.18")

git_override(
    module_name = "mdd-glu",
    commit = "b47adfb9019f9e50230003cae520f5da96dabf2f",
    remote = "https://github.com/ProtocolConvergence/mdd-glu.git",
)
