load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "cx_lib",
    srcs = [
        "alphatab.hh",
        "bittable.h",
        "bittable.hh",
        "def.h",
        "lgtable.h",
        "lgtable.hh",
        "map.hh",
        "sesp.c",
        "sesp.h",
        "set.hh",
        "synhax.h",
        "synhax.hh",
        "syscx.c",
        "table.h",
        "table.hh",
        "tuple.hh",
        "urandom.c",
        "urandom.h",
        "urandom.hh",
    ],
    visibility = ["//src:__subpackages__"],
    deps = [
        "@fildesh//:fildesh_lib",
    ],
)

cc_test(
    name = "testcxx",
    srcs = ["testcxx.cc"],
    deps = [":cx_lib"],
)

cc_test(
    name = "bittable_test",
    size = "small",
    srcs = ["bittable_test.c"],
    deps = [":cx_lib"],
)

cc_test(
    name = "lgtable_test",
    size = "small",
    srcs = ["lgtable_test.c"],
    deps = [":cx_lib"],
)

cc_test(
    name = "table_test",
    size = "small",
    srcs = ["table_test.c"],
    deps = [":cx_lib"],
)
