cc_library(
    name = "detect_lib",
    srcs = [
        "detect.c",
        "detect.h",
        "xnsys.c",
        "xnsys.h",
    ],
    copts = ["-Isrc"],
    visibility = [
        "//test/satsyn:__pkg__",
    ],
    deps = [
        "//src/cx:cx_lib",
    ],
)

cc_library(
    name = "synsearch_lib",
    srcs = [
        "promela.c",
        "promela.h",
        "synsearch.c",
        "synsearch.h",
    ],
    copts = ["-Isrc"],
    visibility = [
        "//test/satsyn:__pkg__",
    ],
    deps = [
        ":detect_lib",
    ],
)

cc_library(
    name = "instance_lib",
    srcs = [
        "instance.c",
        "instance.h",
    ],
    copts = ["-Isrc"],
    visibility = [
        "//test/satsyn:__pkg__",
    ],
    deps = [
        ":detect_lib",
    ],
)

cc_library(
    name = "encodesat_lib",
    srcs = [
        "encodesat.c",
        "encodesat.h",
    ],
    copts = ["-Isrc"],
    visibility = [
        "//test/satsyn:__pkg__",
    ],
    deps = [
        ":synsearch_lib",
    ],
)

cc_binary(
    name = "satsyn",
    srcs = [
        "dimacs.h",
        "inst-sat3.h",
        "pla.c",
        "pla.h",
        "satsyn.c",
    ],
    copts = ["-Isrc"],
    deps = [
        ":encodesat_lib",
        ":instance_lib",
        "//src/inline:inline_cc_lib",
    ],
)
