load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = [
        "//test/uni:__pkg__",
    ],
)

cc_binary(
    name = "aperiodic",
    srcs = [
        "aperiodic.cc",
        "uniact.hh",
        "unifile.cc",
        "unifile.hh",
        "//src:namespace.hh",
    ],
    deps = [
        "//src/cx:cx_lib",
        "@fildesh//:fildesh_cc_lib",
    ],
)

cc_binary(
    name = "classify",
    srcs = [
        "adjlist.hh",
        "classify.cc",
        "livelock.cc",
        "livelock.hh",
        "uniact.hh",
        "unifile.cc",
        "unifile.hh",
        "//src:namespace.hh",
    ],
    deps = [
        "//src:pfmla_lib",
        "//src/cx:cx_lib",
        "//src/inline:inline_cc_lib",
        "@fildesh//:fildesh_cc_lib",
    ],
)

cc_binary(
    name = "generate",
    srcs = [
        "adjlist.hh",
        "canonical.cc",
        "canonical.hh",
        "generate.cc",
        "livelock.cc",
        "livelock.hh",
        "uniact.hh",
        "unifile.cc",
        "unifile.hh",
        "//src:namespace.hh",
    ],
    deps = [
        "//src:pfmla_lib",
        "//src/cx:cx_lib",
        "//src/inline:inline_cc_lib",
        "@fildesh//:fildesh_cc_lib",
    ],
)

cc_binary(
    name = "synthesize",
    srcs = [
        "adjlist.hh",
        "synthesize.cc",
        "uniact.hh",
        "unifile.cc",
        "unifile.hh",
        "//src:namespace.hh",
    ],
    deps = [
        "//src:prot_file_lib",
        "//src/cx:cx_lib",
        "@fildesh//:fildesh_cc_lib",
    ],
)

cc_binary(
    name = "xlate",
    srcs = [
        "adjlist.hh",
        "livelock.cc",
        "livelock.hh",
        "uniact.hh",
        "unifile.cc",
        "unifile.hh",
        "xlate.cc",
        "//src:namespace.hh",
    ],
    deps = [
        "//src:prot_file_lib",
        "//src/cx:cx_lib",
        "@fildesh//:fildesh_cc_lib",
    ],
)
