load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "detect_livelock_test",
    srcs = ["detect_livelock_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:detect_lib",
    ],
)

cc_test(
    name = "encodesat_coloring_test",
    srcs = ["encodesat_coloring_test.cc"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:encodesat_lib",
        "//src/satsyn:instance_lib",
    ],
)

cc_test(
    name = "synthesize_coloring_test",
    srcs = ["synthesize_coloring_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:instance_lib",
        "//src/satsyn:synsearch_lib",
    ],
)

cc_test(
    name = "synthesize_matching_test",
    srcs = ["synthesize_matching_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:instance_lib",
        "//src/satsyn:synsearch_lib",
    ],
)

cc_test(
    name = "synthesize_bit3_test",
    srcs = ["synthesize_bit3_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:instance_lib",
        "//src/satsyn:synsearch_lib",
    ],
)

cc_test(
    name = "synthesize_dijkstra_test",
    srcs = ["synthesize_dijkstra_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:instance_lib",
        "//src/satsyn:synsearch_lib",
    ],
)

cc_test(
    name = "synthesize_dijkstra4state_test",
    srcs = ["synthesize_dijkstra4state_test.c"],
    copts = ["-Isrc"],
    deps = [
        "//src/satsyn:instance_lib",
        "//src/satsyn:synsearch_lib",
    ],
)
